Fixed overflow scrolling bug.

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -15,7 +15,7 @@ body {
 }
 canvas {
     position: absolute;
-	margin-top: -1px;
+	top: -1px;
 }
 a{
 	color: limegreen;
@@ -667,10 +667,10 @@ button {
  }
  #layerCreate{
      position: absolute;
-	 overflow-y: auto;
+	 top: 0;
      right: 0;
      width: 80vw;
-     height: 100vh;
+     min-height: 100vh;
      background-color: #4d5155;
      z-index: 2;
      box-shadow: -1px 0 10px black;
